--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "worker-loader",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "author": "Tobias Koppers @sokra",
   "description": "worker loader module for webpack",
   "main": "dist/cjs.js",
@@ -24,7 +24,8 @@
     "travis:test": "npm run test -- --runInBand",
     "travis:coverage": "npm run test:coverage -- --runInBand",
     "appveyor:test": "npm run test",
-    "defaults": "webpack-defaults"
+    "defaults": "webpack-defaults",
+    "webpack-defaults": "webpack-defaults"
   },
   "peerDependencies": {
     "webpack": "^3.0.0 || ^4.0.0-alpha.0 || ^4.0.0"
